--- a/Styleoflogin.css
+++ b/Styleoflogin.css
@@ -68,7 +68,7 @@ form{
 .button {
   cursor: pointer;
   border: none;
-  margin-top: 40px;
+  margin-top: 50px;
   border-radius: 5px;
   font-weight: bold;
   letter-spacing: 3px;
@@ -175,8 +175,10 @@ span {
 
 .message
 {
-  background-color: rgb(230, 104, 104);
+  background:linear-gradient( 45deg  , #ff462e , #ff2e40 , #ff2e6a );
+  opacity: 0.8;
   margin: 20px 0;
+  margin-bottom: -20px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -186,6 +188,9 @@ span {
   transform: scale(0);
   position: absolute;
   top: 0;
+  font-weight: bold;
+  color: var(--color-white);  
+  letter-spacing: 1px;
   /* transition: all 5s ; */
 }
 
